fixed 100vh problem and bound scroll on safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 16px;
+  overscroll-behavior-y: none;
+  position: fixed;
+  overflow: hidden;
+}
+
+:root{
   --vh:1vh;
 }
 
